# network-training

./: .gitignore  main.py  pyproject.toml  register-host.sh  register-worker.sh
test-gpu/: main.py  pyproject.toml  test-gpu-run.py
