[project]
name = "network-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ray[default]>=2.53.0",
    "test-gpu",
]

[tool.uv.workspace]
members = [
    "test-gpu",
]

[tool.uv.sources]
test-gpu = { workspace = true }
