[project]
name = "network-training"
version = "0.1.0"
description = "Allows setup of ray cluster"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "py-spy>=0.4.1",
    "ray[default]>=2.53.0",
    "test-gpu",
]

[tool.uv.workspace]
members = [
    "test-gpu",
]

[tool.uv.sources]
test-gpu = { workspace = true }
