[project]
name = "network-training"
version = "0.1.0"
description = "Allows setup of ray cluster"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ray[default]>=2.53.0",
]

[tool.setuptools.packages.find]
exclude = ["data*", "catboost_info*", "prometheus*"]  # Glob patterns

[tool.uv.workspace]
members = [
    "test-gpu",
    "."
]
